test/classes/diten/test_shadowing.good
test_shadowing.chpl:9: error: field 'total' has same name as parent class field
test_shadowing.chpl:2: note: parent class field declared here
